--- a/package.xml
+++ b/package.xml
@@ -44,10 +44,18 @@
   <exec_depend>joint_trajectory_controller</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>franka_control</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <depend>controller_interface</depend>
+  <depend>dynamic_reconfigure</depend>
+  <depend>franka_hw</depend>
+  <depend>geometry_msgs</depend>
+  <depend>hardware_interface</depend>
+  <depend>libfranka</depend>
+  <depend>pluginlib</depend>
+  <depend>realtime_tools</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <controller_interface plugin="${prefix}/hiro_panda_controllers_plugin.xml"/>
   </export>
 </package>
